--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header{
     transition: .5s;
 }
 .main_menu a:hover{
+    cursor: pointer;
     padding: 60px 30px;
     background-color: white;
     color:#CF7500;
@@ -52,6 +53,7 @@ header{
     transition: .5s;
 }
 .btn:hover{
+    cursor: pointer;
     background-color: white;
     color: #EEA00A;
     font-size: 27px;
@@ -102,6 +104,7 @@ button{
     transition: .5s;
 }
 button:hover{
+    cursor: pointer;
     background-color: white;
     color: #EEA00A;
     font-size: 27px;
